--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <img src="img/Planta 01.jpg" alt="Una planta" width="150" height="200">
     
     <h2>Menú</h2>
-<!--
     <a href="pagina_form.html">Ir al form.</a>
     <br>
--->
     <a href="pagina_tabla.html">Ir a la tabla.</a>
+    <br>
+    <a href="pagina_vacia.html">Ir a página vacía.</a>    
     <br>
     <a href="pagina_acercade.html">Ir a Acerca de.</a>
 </body>
