--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h2>Una planta</h2>
     <img src="img/Planta 01.jpg" alt="Una planta" width="150" height="200">
     
-    <h2>Menú</h2>
+    <h2>Menú para el usuario</h2>
     <a href="pagina_form.html">Ir al form.</a>
     <br>
     <a href="pagina_tabla.html">Ir a la tabla.</a>
