cambio en la oficina

--- a/pagina_vacia.html
+++ b/pagina_vacia.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Bienvenidas a la página vacía.</h1>
+    <h2>Es una prueba de GITHUB solamente, ésta página no tiene sentido.</h2>
 </body>
 </html>
